# aoc2024

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  filereader.hpp  logger.hpp  main.cpp
src/days/: day_01.cpp  day_01.hpp  day_02.cpp  day_02.hpp  day_03.cpp  day_03.hpp  day_04.cpp  day_04.hpp
