cmake_minimum_required(VERSION 3.28)
project(aoc2024 VERSION 0.1.0)


set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_CXX_EXTENSIONS OFF)

# Add the include directory (if you have headers)
# include_directories(${CMAKE_SOURCE_DIR}/inc)

# Add the subdirectory where the source code is located
add_subdirectory(src)
